[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Hazards/Bomb/Bomb On (52x56).png" type="Texture" id=1]
[ext_resource path="res://Sprites/Hazards/Bomb/Boooooom (52x56).png" type="Texture" id=2]
[ext_resource path="res://Sprites/Hazards/Bomb/Bomb Off.png" type="Texture" id=3]
[ext_resource path="res://Hazards/Bomb.gd" type="Script" id=4]
[ext_resource path="res://Sound/sfx_exp_short_soft1.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 104, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 156, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 208, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 260, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 104, 0, 52, 56 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 156, 0, 52, 56 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "Explode",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "On",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Off",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 8.80222

[node name="Bomb" type="Area2D"]
collision_layer = 4
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 12 )
animation = "Off"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.67138 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 3.67138 )
stream = ExtResource( 5 )
volume_db = 10.0
[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Bomb_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
